# yarp-bottle-generator

./: .gitignore  CMakeLists.txt  README.md  index.html
app/: ball_point_bridge.ini  config.ini  fixation_point_goal.ini  fixation_point_status.ini  tutorial_example_ros_yarp.ini  tutorial_example_yarp_ros.ini  tutorial_example_yarp_ros_more_ports.ini  vizzy_head.ini  vizzy_left_arm.ini  vizzy_right_arm.ini  vizzy_upper_body.ini  vizzy_upper_body_simulation.ini  vizzy_waist.ini
doxygen/: configure.txt
doxygen/doc/html/: annotated.html  bottlecreatorgenerator_8hpp_source.html  childgenerator_8hpp_source.html  classBottleCreatorGenerator-members.html  classBottleCreatorGenerator.html  classCMakeFileGenerator-members.html  classCMakeFileGenerator.html  classChildGenerator-members.html  classChildGenerator.html  classCommonBeginningGenerator-members.html  classCommonBeginningGenerator.html  classCommonEndGenerator-members.html  classCommonEndGenerator.html  classDataConverterGenerator-members.html  classDataConverterGenerator.html  classPortMuxGenerator-members.html  classPortMuxGenerator.html  classYarpCodeGenerator-members.html  classYarpCodeGenerator.html  classes.html  cmakefilegenerator_8hpp_source.html  commonbeginninggenerator_8hpp_source.html  commonendgenerator_8hpp_source.html  dataconvertergenerator_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  md__home_plinio_Software_yarp-bottle-generator_README.html  pages.html  portmuxgenerator_8hpp_source.html  yarpcodegenerator_8hpp_source.html
doxygen/doc/latex/: annotated.tex  classBottleCreatorGenerator.eps  classBottleCreatorGenerator.tex  classCMakeFileGenerator.eps  classCMakeFileGenerator.tex  classChildGenerator.eps  classChildGenerator.tex  classCommonBeginningGenerator.eps  classCommonBeginningGenerator.tex  classCommonEndGenerator.eps  classCommonEndGenerator.tex  classDataConverterGenerator.eps  classDataConverterGenerator.tex  classPortMuxGenerator.eps  classPortMuxGenerator.tex  classYarpCodeGenerator.eps  classYarpCodeGenerator.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  (+6 more)
html/: annotated.html  bottlecreatorgenerator_8hpp_source.html  childgenerator_8hpp_source.html  classBottleCreatorGenerator-members.html  classBottleCreatorGenerator.html  classCMakeFileGenerator-members.html  classCMakeFileGenerator.html  classChildGenerator-members.html  classChildGenerator.html  classCommonBeginningGenerator-members.html  classCommonBeginningGenerator.html  classCommonEndGenerator-members.html  classCommonEndGenerator.html  classDataConverterGenerator-members.html  classDataConverterGenerator.html  classPortMuxGenerator-members.html  classPortMuxGenerator.html  classYarpCodeGenerator-members.html  classYarpCodeGenerator.html  classes.html  cmakefilegenerator_8hpp_source.html  commonbeginninggenerator_8hpp_source.html  commonendgenerator_8hpp_source.html  dataconvertergenerator_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  md__home_plinio_Software_yarp-bottle-generator_README.html  pages.html  portmuxgenerator_8hpp_source.html  yarpcodegenerator_8hpp_source.html
html/search/: all_4.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  search.js
include/: bottlecreatorgenerator.hpp  childgenerator.hpp  cmakefilegenerator.hpp  commonbeginninggenerator.hpp  commonendgenerator.hpp  dataconvertergenerator.hpp  portmuxgenerator.hpp  yarpcodegenerator.hpp
results/: CMakeLists.txt  generatedCode.cpp  working_example.cpp
src/: bottlecreatorgenerator.cpp  childgenerator.cpp  cmakefilegenerator.cpp  commonbeginninggenerator.cpp  commonendgenerator.cpp  dataconvertergenerator.cpp  main.cpp  portmuxgenerator.cpp  yarpcodegenerator.cpp
(+18 files in other folders)
